styles.css
/* ... */
  body.settings-page .cp-field-selector__indicator {
    position: absolute;
    inset: 0;
    pointer-events: none;
    z-index: 10;
  }

  body.settings-page #frame_field_1_visual {
    position: absolute;
    left: 90px;
    top: 464px;
    width: 90px;
    height: 160px;
    display: block;
    overflow: hidden;
  }

  body.settings-page #mapPreview {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    border-radius: 0;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.35);
  }

  body.settings-page #mapPreview.map-preview--random {
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
  }

  body.settings-page .cp-field-selector__objects {
    position: absolute;
    inset: 0;
    pointer-events: none;
    z-index: 1;
  }

  body.settings-page .map-preview-simulation {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    pointer-events: auto;
  }

  body.settings-page .cp-field-selector__object {
    position: absolute;
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }

  body.settings-page .cp-field-selector__object--green-plane {
    background-image: url('ui_controlpanel/field_planes/green_plane_mini.png');
  }

    body.settings-page #f_g_plane1 {
      left: 8px;
      top: 142px;
      width: 15px;
      height: 10px;
    }

    body.settings-page #f_g_plane2 {
      left: 26px;
      top: 142px;
      width: 15px;
      height: 10px;
    }

    body.settings-page #f_g_plane3 {
      left: 49px;
      top: 142px;
      width: 15px;
      height: 10px;
    }

    body.settings-page #f_g_plane4 {
      left: 67px;
      top: 142px;
      width: 15px;
      height: 10px;
    }

  body.settings-page .cp-field-selector__object--green-flag {
    background-image: url('ui_controlpanel/field_planes/green_flag_mini.png');
  }

    body.settings-page #f_g_flag {
      left: 43px;
      top: 143px;
      width: 4px;
      height: 7px;
    }

  body.settings-page .cp-field-selector__object--blue-plane {
    background-image: url('ui_controlpanel/field_planes/blue_plane_mini.png');
  }

      body.settings-page #f_b_plane1 {
        left: 72px;
        top: 8px;
        width: 9px;
        height: 11px;
      }

      body.settings-page #f_b_plane2 {
        left: 56px;
        top: 8px;
        width: 9px;
        height: 11px;
      }

      body.settings-page #f_b_plane3 {
        left: 25px;
        top: 8px;
        width: 9px;
        height: 11px;
      }

      body.settings-page #f_b_plane4 {
        left: 9px;
        top: 8px;
        width: 9px;
        height: 11px;
      }

  body.settings-page .cp-field-selector__object--blue-flag {
    background-image: url('ui_controlpanel/field_planes/blue_flag_mini.png');
  }

  body.settings-page #frame_field_1_visual .cp-field-selector__object--blue-plane {
    transform: scaleY(-1);
    transform-origin: center;
  }

  body.settings-page #frame_field_1_visual .cp-field-selector__object--blue-flag {
    transform: scaleY(-1);
    transform-origin: center;
  }

    body.settings-page #f_b_flag {
      left: 43px;
      top: 10px;
      width: 4px;
      height: 7px;
    }

  body.settings-page #frame_field_2_counter {
    position: absolute;
    left: 105px;
    top: 658px;
    width: 58px;
    height: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: 'Patrick Hand', cursive;
    font-size: 16px;
    color: #1b1205;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
    text-align: center;
  }

  body.settings-page .cp-field-selector__frame {
    position: absolute;
    left: 45px;
    top: 401px;
    width: 178px;
    height: 340px;
    background-image: url('ui_controlpanel/cp_frame_field.png');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    pointer-events: none;
    z-index: 20;
  }

  body.settings-page .cp-field-selector__btn {
    position: absolute;
    border: none;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
    z-index: 30;
  }

  body.settings-page #instance_field_left {
    top: 658px;
    left: 67px;
    width: 30px;
    height: 35px;
  }

  body.settings-page #instance_field_right {
    top: 658px;
    left: 171px;
    width: 30px;
    height: 35px;
  }

  body.settings-page .cp-field-selector__btn--left {
    background-image: url('ui_controlpanel/cp_button_left.png');
  }

  body.settings-page .cp-field-selector__btn--right {
    background-image: url('ui_controlpanel/cp_button_right.png');
  }

  body.settings-page .cp-field-selector__btn:focus-visible {
    outline: 2px solid #f6d265;
    outline-offset: 2px;
  }

  body.settings-page .cp-field-selector__btn:active {
    transform: translateY(1px);
  }

  body.settings-page .cp-actions {
    position: absolute;
    inset: 0;
  }

  body.settings-page .cp-actions__frame {
    position: absolute;
    left: 237px;
    top: 660px;
    width: 178px;
    height: 82px;
    background-image: url('ui_controlpanel/cp_frame_resetand exit.png');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    pointer-events: none;
    z-index: 20;
  }

  body.settings-page .cp-actions__btn {
    position: absolute;
    top: 666px;
    width: 73px;
    height: 69px;
    border: none;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor: pointer;
    z-index: 30;
  }

  body.settings-page .cp-actions__btn--reset {
    left: 244px;
    background-image: url('ui_controlpanel/cp_button_reset.png');
  }

  body.settings-page .cp-actions__btn--exit {
    left: 336px;
    background-image: url('ui_controlpanel/cp_button_exit.png');
  }

  body.settings-page .cp-actions__btn:focus-visible {
    outline: 2px solid #f6d265;
    outline-offset: 2px;
  }
/* ... */

